k8s/namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: ems-system
  labels:
    name: ems-system
